--- a/public/scss/component/_slider.scss
+++ b/public/scss/component/_slider.scss
@@ -302,6 +302,7 @@
 .autoplay-linear {
   .swiper-wrapper {
     transition-timing-function: linear;
+    align-items: center !important;
   }
 }
 .slideshow-men {
