--- a/public/scss/component/_product.scss
+++ b/public/scss/component/_product.scss
@@ -480,7 +480,7 @@
     label {
       position: relative;
       width: 36px;
-      height: 36px;
+      // height: 36px;
       text-align: center;
       padding: 5px;
       border: 1px solid transparent;
